Increase footer margin for desktop to fix overlap on all pages

--- a/FarmaciaSolidariaCristiana/wwwroot/css/site.css
+++ b/FarmaciaSolidariaCristiana/wwwroot/css/site.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+  margin-bottom: 200px;
 }
 
 /* Ajuste para móviles - más espacio para el footer */
